# mychat

./: .gitignore  pyproject.toml
.agent/: instructions.md  project-context.md  rules.md
src/mychat/: main.py
src/mychat/core/: service.py
src/mychat/storage/: models.py  persistence.py
src/mychat/ui/: cli.py  web.py
tests/: test_storage.py
